# mol-screen-agent

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: candidates.smi
src/mol_screen/: __init__.py  agent.py  cli.py  descriptors.py  graph.py  llm.py  rules.py
tests/: test_bedrock_live.py  test_llm_live.py  test_llm_offline.py  test_plan_fallback.py  test_rules.py
