[project]
name = "mol-screen-agent"
version = "0.1.0"
description = "Agentic molecule screening: RDKit property computation + LangGraph orchestration + Bedrock-hosted Claude for intent parsing and reasoning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2023.9.1",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mol-screen = "mol_screen.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
